[package]
name = "pilfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
futures = "0.3.23"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["macros", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tui = "0.19.0"
unicode-width = "0.1.9"
