[package]
name = "pilfer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
crossterm = "0.25.0"
discord-rich-presence = "0.2.3"
futures = "0.3.23"
notify-rust = "4.5.10"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
todel = { git = "https://github.com/eludris/todel", version = "0.3.0" }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tui = "0.19.0"
unicode-width = "0.1.9"
