[package]
name = "pilfer"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A simple TUI frontend for Eludris"
homepage = "https://github.com/eludris/pilfer"
repository = "https://github.com/eludris/pilfer"
readme = "README.md"
categories = [
    "command-line-interface",
    "web-programming::http-client",
    "web-programming::websocket",
]
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
crossterm = "0.25.0"
directories = "5.0.1"
discord-rich-presence = "0.2.3"
futures = "0.3.23"
notify-rust = "4.5.10"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
rpassword = "7.2.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
todel = { git = "https://github.com/eludris/eludris", rev = "b088468" }
tokio = { version = "1.20.1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
toml = "0.7.4"
tui = "0.19.0"
unicode-width = "0.1.9"
